# django-service-urls

./: .editorconfig  .gitignore  .hgignore  .hgtags  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  setup.py
django_service_urls/: __init__.py  base.py  exceptions.py  loads.py  mypy.py  parse.py  services.py  version.py
django_service_urls/services/: __init__.py  cache.py  database.py  email.py  storages.py  tasks.py
requirements/: py310-dj32.txt  py310-dj40.txt  py310-dj41.txt  py310-dj42.txt  py310-dj50.txt  py310-djmain.txt  py311-dj41.txt  py311-dj42.txt  py311-dj50.txt  py311-djmain.txt  py312-dj42.txt  py312-dj50.txt  py312-djmain.txt  py38-dj32.txt  py38-dj40.txt  py38-dj41.txt  py38-dj42.txt  py39-dj32.txt  py39-dj40.txt  py39-dj41.txt  py39-dj42.txt
service_urls/: __init__.py  base.py  deprecation.py  patch.py  services.py  version.py
tests/: __init__.py  settings.py  test_deprecation.py  test_django.py  test_exceptions.py  test_parse.py  test_service_cache.py  test_service_db.py  test_service_email.py  test_service_storage.py  test_service_task.py  test_services.py
