[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "django-service-urls"
description = "setting helper for django to represent databases, caches and email settings via a single string"
authors = [
    {name = "Raffaele Salmaso", email = "raffaele.salmaso@gmail.com"},
]
readme = "README.md"
license = { text = "BSD" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = [
    "version",
]
dependencies = [
    "django",
]

[project.urls]
"Home Page" = "https://pypi.org/project/django-service-urls/"
Documentation = "https://github.com/rsalmaso/django-service-urls/blob/main/README.md"
GitHub = "https://github.com/rsalmaso/django-service-urls"
Changelog = "https://github.com/rsalmaso/django-service-urls/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/rsalmaso/django-service-urls/discussions"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "service_urls.__version__"}

[tool.distutils.bdist_wheel]
universal = false

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
  __pycache__
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
line-length = 120
safe = true
target-version = ["py38"]

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C90", # mccabe
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
]
ignore = [
    "E722", # Do not use bare except, specify exception instead
    "B904",
]

# # Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "I",
]
unfixable = [
    "F401", # don't remove unused import
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*.py",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py38"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = [
    "service_urls",
]
known-third-party = [
    "django",
]
order-by-type = false
