[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "django-service-urls"
description = "setting helper for django to represent databases, caches and email settings via a single string"
authors = [
    {name = "Raffaele Salmaso", email = "raffaele.salmaso@gmail.com"},
]
readme = "README.md"
license = { text = "BSD" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = [
    "version",
]
dependencies = [
    "django",
]

[project.urls]
"Home Page" = "https://pypi.org/project/django-service-urls/"
Documentation = "https://github.com/rsalmaso/django-service-urls/blob/main/README.md"
GitHub = "https://github.com/rsalmaso/django-service-urls"
Changelog = "https://github.com/rsalmaso/django-service-urls/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/rsalmaso/django-service-urls/discussions"

[tool.setuptools]
packages = ["django_service_urls", "service_urls"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "django_service_urls.__version__"}

[tool.distutils.bdist_wheel]
universal = false

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C9", # mccabe
    "DJ", # flake8-django
    "E", # pycodestyle
    "F", # pyflakes
    "I", #
    "W", # pycodestyle

]
ignore = [
    "B904", # Within an except clause, raise exceptions with raise ... from err or raise ... from None to
            # distinguish them from errors in exception handling.
    "E722", # Do not use bare except, specify exception instead
]
fixable = [
    "I",
]
unfixable = [
    "F401", # don't remove unused import
]
line-length = 120
target-version = "py38"

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
known-first-party = [
    "django_service_urls",
    "service_urls",
]
known-third-party = [
    "django",
]
order-by-type = false

[tool.ruff.mccabe]
max-complexity = 18
