[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "django-service-urls"
description = "setting helper for django to represent databases, caches and email settings via a single string"
authors = [
    {name = "Raffaele Salmaso", email = "raffaele@salmaso.org"},
]
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]
dependencies = [
    "django",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.2",
    "mypy>=1.17.1",
    "nox[uv]>=2025.5.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
django32 = [ "django>=3.2,<4.0 ; python_version>='3.10'", "psycopg2-binary" ]
django40 = [ "django>=4.0,<4.1 ; python_version>='3.10'", "psycopg2-binary" ]
django41 = [ "django>=4.1,<4.2 ; python_version>='3.10'", "psycopg2-binary" ]
django42 = [ "django>=4.2,<5.0 ; python_version>='3.10'", "psycopg[binary]" ]
django50 = [ "django>=5.0,<5.1 ; python_version>='3.10'", "psycopg[binary]" ]
django51 = [ "django>=5.1,<5.2 ; python_version>='3.10'", "psycopg[binary]" ]
django52 = [ "django>=5.2,<6.0 ; python_version>='3.10'", "psycopg[binary]" ]
django60 = [ "django>=6.0a1,<6.1 ; python_version>='3.12'", "psycopg[binary]" ]
djangomain = ["django @ git+https://github.com/django/django@main ; python_version>='3.12'", "psycopg[binary]"]

[tool.uv]
conflicts = [[
    { group = "django32" },
    { group = "django40" },
    { group = "django41" },
    { group = "django42" },
    { group = "django50" },
    { group = "django51" },
    { group = "django52" },
    { group = "django60" },
    { group = "djangomain" },
]]
# Ensure Nox always gets a fresh package.
reinstall-package = ["django-service-urls"]

[project.urls]
"Home Page" = "https://pypi.org/project/django-service-urls/"
Documentation = "https://github.com/rsalmaso/django-service-urls/blob/main/README.md"
GitHub = "https://github.com/rsalmaso/django-service-urls"
Changelog = "https://github.com/rsalmaso/django-service-urls/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/rsalmaso/django-service-urls/discussions"

[tool.setuptools]
packages = ["django_service_urls"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "django_service_urls.__version__"}

[tool.distutils.bdist_wheel]
universal = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C9", # mccabe
    "DJ", # flake8-django
    "E", # pycodestyle
    "F", # pyflakes
    "I", #
    "W", # pycodestyle

]
ignore = [
    "B904", # Within an except clause, raise exceptions with raise ... from err or raise ... from None to
            # distinguish them from errors in exception handling.
    "E722", # Do not use bare except, specify exception instead
]
fixable = [
    "I",
]
unfixable = [
    "F401", # don't remove unused import
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
known-first-party = [
    "django_service_urls",
]
known-third-party = [
    "django",
]
order-by-type = false

[tool.ruff.lint.mccabe]
max-complexity = 18
