[metadata]
name = django-service-urls
version = attr: service_urls.__version__
description = setting helper for django to represent databases, caches and email settings via a single string
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/django-service-urls/
project_urls =
    GitHub = https://github.com/rsalmaso/django-service-urls
    GitLab = https://gitlab.com/rsalmaso/django-service-urls
author = Raffaele Salmaso
author_email = raffaele@salmaso.org
license = BSD
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Environment :: Web Environment
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
python_requires = >= 3.5
packages = find:
install_requires =
    django
zip_safe = false

[bdist_wheel]
universal = 0

[flake8]
exclude = .hg,.git,.tox
ignore = W504,W601
inline-quotes = '
max-complexity = 10
max-line-length = 119
show-source = true

[isort]
balanced_wrapping = true
combine_as_imports = true
default_section = THIRDPARTY
force_sort_within_sections = true
include_trailing_comma = true
known_first_party = django
line_length = 79
multi_line_output = 5
not_skip = __init__.py
order_by_type = False
skip = .tox
